# DicePhys

./: CMakeLists.txt  README
3dmodels/: 1.1x2.9x14.stl  1.3x2.2x14.stl  1.3x2.7x14.stl  1x3x14.stl  2x2.4x10.stl  2x2.4x14.stl
src/: CMakeLists.txt  Dice.cpp  Dice.h  DicePhys.cpp  DicePhys.h  World.cpp  World.h  WorldObject.cpp  WorldObject.h
